replace "get(0)" and "get(size() - 1)" with "getFirst()" and "getLast()"